# fastrpc-sc8280xp-testing

./: .gitignore  README.md  config.h  run.sh
inc/: HAP_farf.h  fastrpc_internal.h  remote.h  verify.h
src/: Makefile.am  adsp_default_listener.c  adspmsgd_apps.c  apps_mem_imp.c  apps_std_imp.c  cdsprpcd.c  fastrpc_apps_user.c  fastrpc_perf.c  listener_android.c  log_config.c  mod_table.c  rpcmem_android.c  sdsprpcd.c
